force-app/main/default/objects/Disclaimer__c/Disclaimer__c.object-meta.xml
<CustomObject>
    <description>This object is used to define template disclaimers which can be of the following types: Apppointment, General, Practitioner etc.</description>
    <label>Disclaimer</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disclaimers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>