force-app/main/default/objects/Disclaimer__c/fields/Input_type__c.field-meta.xml
<CustomField>
    <fullName>Input_type__c</fullName>
    <description>This field will determine that the disclaimer needs a checkbox agreement or a text input agreement.</description>
    <label>Input type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Text Input</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>