force-app/main/default/objects/Disclaimer__c/fields/Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Practitioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be storing Practitioner record against the disclaimer.</description>
    <label>Practitioner</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Practitioner</value>
        </filterItems>
        <filterItems>
            <field>Contact.Elixir_Contact_Type__c</field>
            <operation>equals</operation>
            <value>Elixir_Practitioner_Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Disclaimers</relationshipLabel>
    <relationshipName>Disclaimers</relationshipName>
    <type>Lookup</type>
</CustomField>