force-app/main/default/objects/Disclaimer__c/fields/Priority_Order__c.field-meta.xml
<CustomField>
    <fullName>Priority_Order__c</fullName>
    <description>This field will identify in which order we will display disclaimers on the custom screen.</description>
    <label>Priority Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>