force-app/main/default/objects/Disclaimer__c/fields/Require_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Require_Agreement__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field will ensure whether the disclaimer required agreement from the patient.</description>
    <label>Require Agreement</label>
    <type>Checkbox</type>
</CustomField>