force-app/main/default/objects/Disclaimer__c/fields/Template_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Template_Procedure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be storing Template Procedure record against the disclaimer.</description>
    <label>Template Procedure</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Procedure__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Template_Procedure</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Procedure__c</referenceTo>
    <relationshipLabel>Disclaimers</relationshipLabel>
    <relationshipName>Disclaimers</relationshipName>
    <type>Lookup</type>
</CustomField>