force-app/main/default/objects/Disclaimer__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This field will store different types for which we can create disclaimers.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Practitioner</fullName>
            </value>
            <value>
                <fullName>Reservation</fullName>
            </value>
            <value>
                <fullName>Lab order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>