force-app/main/default/objects/Disclaimer__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>This field will store different versions for the disclaimers.</description>
    <label>Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>