force-app/main/default/objects/Disclaimer__c/validationRules/InputTypeNone.validationRule-meta.xml
<ValidationRule>
    <fullName>InputTypeNone</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Input_type__c, &apos;&apos;),
  Require_Agreement__c  = true)</errorConditionFormula>
    <errorMessage>Can not have an input type of “None” also be “Required”. Please change the input type if you wish for it to be required.</errorMessage>
</ValidationRule>